# RPL_WORK

lanke_marius_xiote/: Readme.txt~
lanke_marius_xiote/.svn/: wc.db
lanke_marius_xiote/localization/: CMakeLists.txt
lanke_marius_xiote/localization/include/: localization_processor.h  motion_update.h  resample.h  sensor_update.h  visualization.h
lanke_marius_xiote/localization/include/distribution/: distribution.h
lanke_marius_xiote/localization/include/parameter/: distribution_bag.h  motion_update_bag.h  parameter_bag.h  tf_broadcaster_bag.h  visualization_bag.h
lanke_marius_xiote/localization/include/util/: math_util.h
lanke_marius_xiote/localization/launch/: localization.launch  localization.launch~  search_and_rescue.launch~
lanke_marius_xiote/localization/parameter/: motion_update_bag.yaml~  parameter_bag.yaml~  sensor_update_bag.yaml  tf_broadcaster_bag.yaml  visualization_bag.yaml
lanke_marius_xiote/localization/src/: localization_node.cpp  localization_processor.cpp  motion_update.cpp  sensor_update.cpp  visualization.cpp
lanke_marius_xiote/localization/src/sampling/: roulette_sampling.cpp
lanke_marius_xiote/object_recognition/: package.xml
lanke_marius_xiote/object_recognition/include/: common.h  object_recognition_processor.h  segment.h  select_keypoint.h
lanke_marius_xiote/object_recognition/include/parameter/: parameter_bag.h  visualization_bag.h
lanke_marius_xiote/object_recognition/launch/: object_recognition.launch
lanke_marius_xiote/object_recognition/parameter/: parameter_bag.yaml
lanke_marius_xiote/object_recognition/src/: object_recognition_processor.cpp  tf_broadcaster.cpp  tf_broadcaster.cpp~  visualization.cpp
lanke_marius_xiote/roboscoop/roboscoop_lib/: roboscoop.ecf
lanke_marius_xiote/roboscoop/roboscoop_lib/_cpp/: publisher.h  roboscoop_node.h  spinner.h  subscriber.h
lanke_marius_xiote/roboscoop/roboscoop_lib/actuator/: rgb_color_actuator.e
lanke_marius_xiote/roboscoop/roboscoop_lib/controller/: cancellable_control_loop.e  wander_controller.e
lanke_marius_xiote/roboscoop/roboscoop_lib/msg/: color_rgba_msg.e  float_32_msg.e  header_msg.e  map_metadata_msg.e  occupancy_grid_msg.e  odometry_msg.e  path_msg.e  quaternion_msg.e  reflected_ambient_msg.e  stamped_msg.e  twist_msg.e  twist_with_covariance_msg.e
lanke_marius_xiote/roboscoop/roboscoop_lib/ros/: roboscoop_node.e  (+5 more)
lanke_marius_xiote/roboscoop/roboscoop_ros/: CMakeLists.txt
lanke_marius_xiote/roboscoop/roboscoop_ros/launch/: cloudify.launch  cloudify_rgb.launch  thymio_driver.launch
lanke_marius_xiote/roboscoop/thymio_app/: app_duration.e
object_recognition_frank_separate/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~  readme.txt  readme.txt~
object_recognition_frank_separate/config/: parameters.info
object_recognition_frank_separate/config/duck/: duck_close_0.pcd  duck_close_135.pcd  duck_close_180.pcd  duck_close_225.pcd  duck_close_270.pcd  duck_close_315.pcd  duck_close_45.pcd  duck_close_90.pcd  duck_far_0.pcd  duck_far_135.pcd  duck_far_180.pcd  duck_far_225.pcd  duck_far_270.pcd  duck_far_315.pcd  duck_far_45.pcd  duck_far_90.pcd
object_recognition_frank_separate/config/firefighter/: firefighter_close_0.pcd  firefighter_close_135.pcd  firefighter_close_180.pcd  firefighter_close_225.pcd  firefighter_close_270.pcd  firefighter_close_315.pcd  firefighter_close_45.pcd  firefighter_close_90.pcd  firefighter_far_0.pcd  firefighter_far_135.pcd  firefighter_far_180.pcd  firefighter_far_225.pcd  firefighter_far_270.pcd  firefighter_far_315.pcd  firefighter_far_45.pcd  firefighter_far_90.pcd
object_recognition_frank_separate/config/man/: man_close_0.pcd  man_close_135.pcd  man_close_180.pcd  man_close_225.pcd  man_close_270.pcd  man_close_315.pcd  man_close_45.pcd  man_close_90.pcd  man_far_0.pcd  man_far_135.pcd  man_far_180.pcd  man_far_225.pcd  man_far_270.pcd  man_far_315.pcd  man_far_45.pcd  man_far_90.pcd
object_recognition_frank_separate/config/woman/: woman_close_0.pcd  woman_close_135.pcd  woman_close_180.pcd  woman_close_225.pcd  woman_close_270.pcd  woman_close_315.pcd  woman_close_45.pcd  woman_close_90.pcd  woman_far_0.pcd  woman_far_135.pcd  woman_far_180.pcd  woman_far_225.pcd  woman_far_270.pcd  woman_far_315.pcd  woman_far_45.pcd  woman_far_90.pcd
object_recognition_frank_separate/include/: common.h
object_recognition_frank_separate/include/Point_Cloud/: Cloud_Filter.cpp  Cloud_Filter.h  Load_From_PCD.cpp  Load_From_PCD.h  Spin_Image_Extraction.cpp  Spin_Image_Extraction.h  publisher.cpp  publisher.h
object_recognition_frank_separate/include/object_recognition/: Object_Recognition.cpp  Object_Recognition.h
object_recognition_frank_separate/launch/: object_recognition_node.launch  object_recognition_node.launch~
object_recognition_frank_separate/src/: main.cpp
(+2231 files in other folders)
